2003-08-17  Wakaba  <wakaba@suika.fam.cx>

	* introduction.ja.html: Updated.

2002-07-20  Wakaba  <w@suika.fam.cx>

	* example/: New directory.

2002-07-17  Wakaba  <w@suika.fam.cx>

	* charset.ja.html: Added some sections.

2002-07-13  Wakaba <w@suika.fam.cx>

	* introduction.ja.html (#code): Removed.
	* charset.ja.html: New document.
	* ChangeLog: New file.