@@ -1,3 +1,9 @@
+2005-09-05  Wakaba  <w@suika.fam.cx>
+
+	* style/, template/: New directory.
+	
+	* Makefile: New file.
+
 2003-08-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* introduction.ja.html: Updated.
